<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_logo_dark">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/idIVApartament"
            android:scaleType="centerCrop"
            android:contentDescription="@string/apartament_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apartament_name"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:layout_margin="3dp"
            android:padding="4dp"
            android:textSize="15sp"
            android:layout_below="@+id/idIVApartament"
            android:id="@+id/idTVName"
            android:layout_toLeftOf="@id/idTVType"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apartament_type"
            android:textSize="15sp"
            android:padding="4dp"
            android:layout_margin="3dp"
            android:layout_below="@+id/idIVApartament"
            android:layout_alignParentEnd="true"
            android:id="@+id/idTVType"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_alternates_bold"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>