<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailField"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/black"
            app:met_primaryColor="@color/blue_logo"
            app:met_errorColor="@color/error"
            app:met_singleLineEllipsis="true"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordField"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/black"
            app:met_primaryColor="@color/blue_logo"
            app:met_errorColor="@color/error"
            app:met_singleLineEllipsis="true"
            app:met_minCharacters="6"
            app:met_maxCharacters="15"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameField"
            android:hint="@string/name_text"
            android:inputType="text"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/black"
            app:met_primaryColor="@color/blue_logo"
            app:met_errorColor="@color/error"
            app:met_singleLineEllipsis="true"
            app:met_minCharacters="2"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneField"
            android:hint="@string/phone_text"
            android:inputType="phone"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/black"
            app:met_primaryColor="@color/blue_logo"
            app:met_errorColor="@color/error"
            app:met_singleLineEllipsis="true"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>