<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddApartamentActivity"
    android:background="@color/blue_logo"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@drawable/input_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:gravity="center"
            >

            <com.rengwuxian.materialedittext.MaterialEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apartamentName"
                android:hint="@string/apartament_name"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/black"
                app:met_primaryColor="@color/blue_logo"
                app:met_errorColor="@color/error"
                app:met_singleLineEllipsis="true"
                android:layout_margin="10dp"
                />

            <com.rengwuxian.materialedittext.MaterialEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apartamentAddress"
                android:hint="@string/apartament_address"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/black"
                app:met_primaryColor="@color/blue_logo"
                app:met_errorColor="@color/error"
                app:met_singleLineEllipsis="true"
                android:layout_margin="10dp"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apartamentType"
                android:hint="@string/apartament_type"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/black"
                app:met_primaryColor="@color/blue_logo"
                app:met_errorColor="@color/error"
                app:met_singleLineEllipsis="true"
                android:layout_margin="10dp"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apartamentImage"
                android:hint="@string/apartament_image"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/black"
                app:met_primaryColor="@color/blue_logo"
                app:met_errorColor="@color/error"
                app:met_singleLineEllipsis="true"
                android:layout_margin="10dp"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/apartamentDescription"
                android:hint="@string/apartament_description"
                android:inputType="textLongMessage"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/black"
                app:met_primaryColor="@color/blue_logo"
                app:met_errorColor="@color/error"
                app:met_singleLineEllipsis="true"
                android:layout_margin="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textAllCaps="false"
                android:text="@string/add_apartament_button_text"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:textSize="15sp"
                android:id="@+id/buttonAddApartament"
                >

            </Button>

        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:id="@+id/prgBarLoading"
            android:visibility="gone"
            />

    </RelativeLayout>

</ScrollView>